--- a/index.html
+++ b/index.html
@@ -14,24 +14,9 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-    }
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
     body{
       background-color: hsl(212, 45%, 89%);
       font-family: 'Outfit', sans-serif;
-    }
-    .content{
-      margin-left: 40px;
-      margin-right: 40px;
-      text-align: center;
-      color: hsl(220, 15%, 55%);
-      font-size: 15px;
     }
     .title{
       margin: 17px 35px 22px 35px;
@@ -42,7 +27,7 @@
       color: hsl(218, 44%, 22%);
     }
     .white-box{
-      height: 500px;
+      height: 370px;
       width: 315px;
       margin: auto;
       background-color: white;
@@ -51,10 +36,10 @@
       margin-bottom: 95px;
     }
     .qr-box{
-      width: 90%;
+      width: 80%;
       margin-left: 15px;
       margin-top: 15px;
-      border-radius: 15px;
+      border-radius: 10px;
     }
   </style>
 </head>
@@ -62,14 +47,7 @@
 <body>
   <div class="white-box">
     <img class="qr-box" src="images/qr.png" alt="qr-img">
-    <h2 class="title">Improve your front-end skills by building projects</h2>
-    <p class="content">Scan the QR code to visit Frontend mentor and take your coding skills to the next
-    level</p>
-  </div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="instagram.com/_sahxil" target="_blank">Sahil</a>.
+    <h2 class="title">Scan the QR and then SMD</h2>
   </div>
 </body>
 
