--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     }
     .qr-box{
       width: 80%;
-      margin-left: 15px;
-      margin-top: 15px;
+      margin: 31.5px 31.5px 0 31.5px;
       border-radius: 10px;
     }
   </style>
